# shrs_insulter

./: Cargo.toml  README.md
examples/: basic.rs
src/: insults.rs  lib.rs  plugin.rs  state.rs
