[package]
name = "shrs_insulter"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["nithinmuthukumar"]
description = "Implementation of bash insulter"
repository = "https://github.com/nithinmuthukumar/shrs_insulter"

[dependencies]
rand = "0.8.5"
lazy_static = "1.4.0"
shrs = { git = "https://github.com/MrPicklePinosaur/shrs"}

